--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^1.1.3",
+    "millify": "^5.0.1",
     "next": "13.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0"
